--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         h1{
             margin-top: 100px;
         }
+        #flex-container{
+            height: 300px;
+            background-color: lightpink;
+        }
     </style>
 </head>
 <body>
@@ -124,6 +128,67 @@
             <a class="nav-link" href="">Home</a>
             <a class="nav-link" href="">Home</a>
         </nav>
+
+        <!-- Grid -->
+
+        <div  class="container">
+            <h1>Grid</h1>
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
+                    <p>1 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias ratione, at autem eaque voluptates id nisi mollitia facilis quas! Nulla consequatur eum esse nostrum illum ipsam vitae sed dolore omnis voluptatibus in tempore voluptatem nisi aliquid ex, mollitia aliquam, consectetur cupiditate delectus! Odit libero minus reiciendis ducimus commodi sapiente pariatur!</p>
+                    <img class="img-fluid" src="/images/work-1.png" alt="">
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias ratione, at autem eaque voluptates id nisi mollitia facilis quas! Nulla consequatur eum esse nostrum illum ipsam vitae sed dolore omnis voluptatibus in tempore voluptatem nisi aliquid ex, mollitia aliquam, consectetur cupiditate delectus! Odit libero minus reiciendis ducimus commodi sapiente pariatur!</p>
+                    <img class="img-fluid" src="/images/work-2.jpg" alt="">
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias ratione, at autem eaque voluptates id nisi mollitia facilis quas! Nulla consequatur eum esse nostrum illum ipsam vitae sed dolore omnis voluptatibus in tempore voluptatem nisi aliquid ex, mollitia aliquam, consectetur cupiditate delectus! Odit libero minus reiciendis ducimus commodi sapiente pariatur!</p>
+                    <img class="img-fluid" src="/images/work-3.jpg" alt="">
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias ratione, at autem eaque voluptates id nisi mollitia facilis quas! Nulla consequatur eum esse nostrum illum ipsam vitae sed dolore omnis voluptatibus in tempore voluptatem nisi aliquid ex, mollitia aliquam, consectetur cupiditate delectus! Odit libero minus reiciendis ducimus commodi sapiente pariatur!</p>
+                    <img class="img-fluid" src="/images/profile1.png" alt="">
+                </div>
+            </div>
+        </div>
+
+        <!-- Carousel -->
+
+        <h1>Carousel</h1>
+        <div class="container"></div>
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                <img src="/images/work-1.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                <img src="/images/work-2.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                <img src="/images/work-3.jpg" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+            </div>
+        
+        <!-- Flex Layout -->
+
+        <div class="container">
+            <h1>Flex Layout</h1>
+                <div id="flex-container" class="d-flex align-items-center justify-content-center">
+                    <div>Damn</div>
+                    <div>Son</div>
+                    <div>Lit</div>
+                </div>
+        </div>
 
         <!-- Java Script -->
 
